--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "tecnickcom/tcpdf",
+    "name": "limepdfcom/limepdf",
     "type": "library",
-    "description": "TCPDF is a PHP class for generating PDF documents and barcodes.",
+    "description": "limePDF is an update of TCPDF for generating PHP class documents and barcodes.",
     "keywords": [
         "PDF",
         "tcpdf",
@@ -11,13 +11,13 @@
         "pdf417",
         "barcodes"
     ],
-    "homepage": "http://www.tcpdf.org/",
+    "homepage": "http://www.limePDF.com/",
     "version": "6.10.0",
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
-            "name": "Nicola Asuni",
-            "email": "info@tecnick.com",
+            "name": "Brad Smith",
+            "email": "info@limePDF.com",
             "role": "lead"
         }
     ],
@@ -26,8 +26,11 @@
         "ext-curl": "*"
     },
     "autoload": {
+        "psr-4": {
+            "LimePDF\\": "src/"
+            },
         "classmap": [
-            "config",
+            "src",
             "include",
             "tcpdf.php",
             "tcpdf_barcodes_1d.php",
