refactoring and moving files

--- a/composer.json
+++ b/composer.json
@@ -32,15 +32,15 @@
         "classmap": [
             "src",
             "include",
-            "tcpdf.php",
             "tcpdf_barcodes_1d.php",
             "tcpdf_barcodes_2d.php",
-            "include/tcpdf_colors.php",
-            "include/tcpdf_filters.php",
-            "include/tcpdf_font_data.php",
-            "include/tcpdf_fonts.php",
-            "include/tcpdf_images.php",
-            "include/tcpdf_static.php",
+            "src/Config/TCPDF_LimePDF.php",
+            "include/limePDF_Colors.php",
+            "include/limePDF_Filters.php",
+            "include/limePDF_Font_Data.php",
+            "include/limePDF_Font.php",
+            "include/limePDF_Images.php",
+            "include/limePDF_Static.php",
             "include/barcodes/datamatrix.php",
             "include/barcodes/pdf417.php",
             "include/barcodes/qrcode.php"
