--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "limepdfcom/limepdf",
     "type": "library",
-    "description": "limePDF is an update of TCPDF for generating PHP class documents and barcodes.",
+    "description": "limePDF is an update of the legacy TCPDF libraries for generating PHP class documents and barcodes in Php.",
     "keywords": [
         "PDF",
         "tcpdf",
@@ -12,7 +12,7 @@
         "barcodes"
     ],
     "homepage": "http://www.limePDF.com/",
-    "version": "6.10.0",
+    "version": "0.2.0",
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
